--- a/Embedded_Systems-Filip_Turoboś,_Krzysztof_Wierzbicki,_Jan_Filipowicz.tex
+++ b/Embedded_Systems-Filip_Turoboś,_Krzysztof_Wierzbicki,_Jan_Filipowicz.tex
@@ -243,7 +243,7 @@ Podczas gry w Procesja$^{\textrm{TM}}$ gracz manewruje przy pomocy joysticka i/l
 	\item zbierać pojawiające się na planszy kropki symbolizujące zbłąkane owieczki.
 \end{itemize}
 
-W przypadku gdy gracz najedzie łamaną na pulsującą kropkę, całość procesji zostaje przedłużona. Radując się z ilości zgromadzonych wiernych możemy odgrywać pieśń sakralną \textit{"Barka"} autorstwa Jana Pawła II.
+W przypadku gdy gracz najedzie łamaną na pulsującą kropkę, całość procesji zostaje przedłużona. Radując się z ilości zgromadzonych wiernych możemy odgrywać pieśń religijna \textit{"Barka"}.
 
 \section{Algorytm gry}
 
@@ -266,6 +266,7 @@ Posuszanie wężem polega na sprawdzaniu stanów poszczególnych pinów. Przykł
 
 %Joystick czytamy z portu 2 piny 0..4
 
+\subsection{PCA9532}
 \subsection{ADC}
 \textit{Analog-Digital Converter}, czyli
 \textbf{Konwerter analogowo-cyfrowy} $(ADC)$ jest przetwornikiem pozwalającym na zmianę zewnętrznego sygnału analogowego (w naszym przypadku napięcia) na ciąg $10$ bitów. $ADC$ na stosowanym przez nas mikrokontrolerze używa algorytmu sukcesywnej aproksymacji, którego krótki opis załączony zostanie w podrozdziale \textbf{Algorytm sukcesywnej aproksymacji w $ADC$}.
